--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
   <script src='lib/backbone-min.js' type='text/javascript'></script>
   <script src='lib/swagger.js' type='text/javascript'></script>
   <script src='swagger-ui.js' type='text/javascript'></script>
+  <script src='lib/swagger-oauth.js' type='text/javascript'></script>
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
 
   <!-- enabling this will enable oauth2 implicit scope support -->
@@ -32,13 +33,13 @@
         log("Loaded SwaggerUI");
 
         if(typeof initOAuth == "function") {
-          /*
+
           initOAuth({
-            clientId: "your-client-id",
+            clientId: "clientapp",
             realm: "your-realms",
             appName: "your-app-name"
           });
-          */
+
         }
         $('pre code').each(function(i, e) {
           hljs.highlightBlock(e)
